updated api and migartions
